--- a/package.json
+++ b/package.json
@@ -24,17 +24,22 @@
     },
     "homepage": "https://github.com/ermanc/ChromeiQL#readme",
     "dependencies": {
-        "graphiql": "^0.11.3",
-        "graphql": "^0.10.5",
-        "react": "^15.5.0",
-        "react-dom": "^15.5.0"
+        "graphiql": "^0.17.5",
+        "graphql": "^14.6.0",
+        "prop-types": "^15.7.2",
+        "react": "^16.13.0",
+        "react-dom": "^16.13.0"
     },
     "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-preset-env": "^1.6.0",
-        "babel-preset-react": "^6.24.1",
-        "webpack": "^2.3.2"
+        "@babel/core": "^7.8.7",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/preset-env": "^7.8.7",
+        "@babel/preset-react": "^7.8.3",
+        "babel-loader": "^8.0.6",
+        "css-loader": "^3.4.2",
+        "style-loader": "^1.1.3",
+        "webpack": "^4.42.0",
+        "webpack-cli": "^3.3.11"
     }
 }
