--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
-    "name": "ChromeiQL",
+    "name": "GraphiQL extension",
     "version": "1.0",
-    "description": "Chrome app wrapper for the GraphiQL tool",
+    "description": "Chrome extension for the GraphiQL tool",
     "background": {
         "scripts": [
             "js/background.js"
@@ -10,13 +10,13 @@
         "persistent": false
     },
     "browser_action": {
-        "default_title": "Launch ChromeiQL",
-        "default_icon": "public/chromeiql_logo.png"
+        "default_title": "Launch GraphiQL",
+        "default_icon": "public/logo.png"
     },
     "icons": {
-        "16": "public/chromeiql_logo.png",
-        "48": "public/chromeiql_logo.png",
-        "128": "public/chromeiql_logo.png"
+        "16": "public/logo.png",
+        "48": "public/logo.png",
+        "128": "public/logo.png"
     },
     "permissions": [
         "http://*/",
