--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "chromeiql",
+    "name": "graphiql-extension",
     "version": "1.0.0",
     "description": "Thin multi-endpoint wrapper for GraphiQL as a Chrome extension",
     "main": "js/index.js",
@@ -8,21 +8,18 @@
         "dev": "webpack --watch",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/ermanc/ChromeiQL.git"
-    },
+    "repository": "github:PowerKiKi/graphiql-extension",
     "keywords": [
         "graphql",
         "graphiql",
-        "chromeiql"
+        "graphiql-extension"
     ],
     "author": "Erman Celen <ermancelen@gmail.com> (https://github.com/ermanc)",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/ermanc/ChromeiQL/issues"
+        "url": "https://github.com/PowerKiKi/graphiql-extension/issues"
     },
-    "homepage": "https://github.com/ermanc/ChromeiQL#readme",
+    "homepage": "https://github.com/PowerKiKi/graphiql-extension",
     "dependencies": {
         "graphiql": "^0.17.5",
         "graphql": "^14.6.0",
