--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "js/index.js",
     "scripts": {
         "build": "webpack",
-        "dev": "webpack --watch",
+        "dev": "webpack --watch --info-verbosity verbose",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": "github:PowerKiKi/graphiql-extension",
