--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,8 @@
 {
     "manifest_version": 2,
-    "name": "GraphiQL extension",
+    "name": "FoxyQL",
     "version": "1.2",
-    "description": "Chrome extension for the GraphiQL tool",
-    "background": {
-        "scripts": [
-            "js/background.js"
-        ],
-        "persistent": false
-    },
+    "description": "Firefox extension for the GraphiQL tool",
     "browser_action": {
         "default_title": "Launch GraphiQL",
         "default_icon": "public/logo.png"
