--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,14 @@
 {
     "manifest_version": 2,
-    "name": "FoxyQL",
+    "name": "GraphiQL extension",
     "version": "1.2",
-    "description": "Firefox extension for the GraphiQL tool",
+    "description": "Chrome extension for the GraphiQL tool",
+    "background": {
+        "scripts": [
+            "js/background.js"
+        ],
+        "persistent": false
+    },
     "browser_action": {
         "default_title": "Launch GraphiQL",
         "default_icon": "public/logo.png"
